doc/LL grammar.txt
<source-program>              -> <class-definition-list>

<class-definition-list>       -> <class-definition> <class-definition-list>
<class-definition-list>       -> epsilon

<class-definition>            -> class <identifier> <compound-statement>

<definition>                  -> <static-type> <type-specifier> <identifier> <more-definition>
<more-definition>             -> ( <function-parameters-list> ) <compound-statement>
<more-definition>             -> <variable-initialization> ;

<parameter-definition>			-> <type-specifier-optional> <identifier>

<variable-initialization>        -> = expression
<variable-initialization>        -> epsilon

<function-parameters-list>     -> <parameter-definition> <more-function-parameters>				// zmena <definition> -> <parameter-definition>
<function-parameters-list>     -> epsilon
<more-function-parameters>     -> , <parameter-definition> <more-function-parameters> 
<more-function-parameters>     -> epsilon

<static-type>                 -> epsilon
<static-type>                  -> static

<statement>                    -> <compound-statement>
<statement>                   -> <assign-statement>
<statement>                   -> <selection-statement>
<statement>                    -> <iteration-statement>
<statement>                    -> <jump-statement>

<block-items-list>             -> <block-item> <block-items-list>
<block-items-list>             -> epsilon
<block-item>                   -> <definition>
<block-item>					-> <statement>

<compound-statement>           -> { <block-items-list> }
<assign-statement>             -> identifier <next> ;
<selection-statement>          -> if ( expression ) <compound-statement> else <compound-statement>
<iteration-statement>          -> while ( expression ) <compound-statement>
<jump-statement>               -> return <expr> ;

<next>                         -> ( <function-parameters-list> ) 
<next>                         -> = <more-next>

<more-next>                    -> <identifier> ( <function-parameters-list> ) 
<more-next>                    -> expression 

<identifier>                   -> simple-identifier
<identifier>                   -> fully-qualified-identifier
<identifier>                   -> decimal-constant
<identifier>                   -> floating-point-constant

<type-specifier>               -> void
<type-specifier>               -> double
<type-specifier>               -> int
<type-specifier>               -> String
<type-specifier>               -> epsilon

<type-specifier-optional>      -> <type-specifier>
<type-specifier-optional>      -> eps


<expr>                         -> epsilon
<expr>                         -> expression
